--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -177,7 +177,7 @@
             android:layout_gravity="end|bottom"
             android:layout_marginTop="@dimen/dimen_10dp"
             android:layout_marginEnd="@dimen/dimen_10dp"
-            app:setUserFavorite="@{viewModel.fav}"
+            app:setUserFavorite="@{viewModel.resultInsertUserDb}"
             android:src="@drawable/ic_baseline_favorite_border_24"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
